trees: add timber based trees
There is a BaseTree, which can contain several BaseTreeComponents.

Components define logic for events, emitted by the BaseTree, for example
whenever the BaseTree logs, it will forward these calls to all components,
which can react with their custom logic.

Change-Id: I4db4420d4c8b2a785f0e257d9a6a14105bc3b6e7
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/UniversalDebug-core/build.gradle
+++ b/UniversalDebug-core/build.gradle
@@ -19,5 +19,8 @@ android {
 }
 
 dependencies {
-    // empty
+    compile 'com.android.support:support-annotations:23.3.0'
+
+    // see https://github.com/JakeWharton/timber
+    compile 'com.jakewharton.timber:timber:4.1.1'
 }
