--- a/build.gradle
+++ b/build.gradle
@@ -3,18 +3,25 @@
 buildscript {
     repositories {
         jcenter()
+        // FABRIC
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0-beta1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // fabric
+        classpath 'io.fabric.tools:gradle:1.21.5'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        // FABRIC
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
 
