--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 23
@@ -47,4 +48,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
 
     compile project(':UniversalDebug-core')
+    compile project(':UniversalDebug-fabric')
 }
