add bintray configurations
Change-Id: Ic8c2bf04a581202b29105f6f947309a7f9e3c52c
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -47,6 +47,6 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
 
-    compile project(':UniversalDebug-core')
-    compile project(':UniversalDebug-fabric')
+    compile project(':universal-debug')
+    compile project(':universal-debug-fabric')
 }
