--- a/universal-debug-fabric/build.gradle
+++ b/universal-debug-fabric/build.gradle
@@ -52,7 +52,7 @@ android {
 }
 
 dependencies {
-    compile project(':UniversalDebug-core')
+    compile project(':universal-debug')
 
     // fabric
     // see https://fabric.io/kits/android/answers
@@ -63,4 +63,8 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
+}
+
+if (project.hasProperty('bintray_user') && project.hasProperty('bintray_api_key')) {
+    apply from: 'bintray.gradle'
 }
