--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.2.0-alpha1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,6 +18,9 @@ buildscript {
 
         // fabric
         classpath 'io.fabric.tools:gradle:1.21.5'
+
+        // firebase
+        classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
