--- a/universal-debug-firebase/build.gradle
+++ b/universal-debug-firebase/build.gradle
@@ -23,8 +23,6 @@
  */
 
 apply plugin: 'com.android.library'
-// add to master project
-//apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 23
@@ -36,12 +34,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        if (project.hasProperty("api_key_fabric")) {
-            manifestPlaceholders = [apiKeyFabric: api_key_fabric]
-        } else {
-            logger.quiet("Please add your API KEY for fabric to gradle.properties:")
-            logger.quiet("api_key_fabric=YOUR_API_KEY")
-        }
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -54,17 +47,9 @@ android {
 dependencies {
     compile 'at.amartinz:universal-debug:1.0.0'
 
-    // fabric
-    // see https://fabric.io/kits/android/answers
-    compile('com.crashlytics.sdk.android:answers:1.3.6@aar') {
-        transitive = true;
-    }
-    // see https://fabric.io/kits/android/crashlytics
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
-        transitive = true;
-    }
-}
+    compile 'com.android.support:support-annotations:23.4.0'
 
-if (project.hasProperty('bintray_user') && project.hasProperty('bintray_api_key')) {
-    apply from: 'bintray.gradle'
+    compile 'com.google.firebase:firebase-core:9.0.0'
+    compile 'com.google.firebase:firebase-analytics:9.0.0'
+    compile 'com.google.firebase:firebase-crash:9.0.0'
 }
